<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zdjf.qqh.ui.customview.TopBarView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="注册"
        app:show_close="visible"
        app:title_text_color="@color/mainTextColor" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_view"
        android:layout_marginTop="30px"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contour_up_down_shape"
            android:orientation="horizontal"
            android:paddingBottom="30px"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:paddingTop="30px">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_phone_string" />

            <EditText
                android:id="@+id/phone_et"
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:background="@null"
                android:hint="@string/register_hint_phone_string"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHint="@color/hintTextColor" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contour_down_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15px"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:paddingTop="15px">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_verification_code_string" />

            <EditText
                android:id="@+id/verification_et"
                style="@style/TitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/register_hint_verification_string"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColorHint="@color/hintTextColor" />

            <TextView
                android:id="@+id/get_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/verification_bg"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="16px"
                android:paddingLeft="16px"
                android:paddingRight="16px"
                android:paddingTop="16px"
                android:singleLine="true"
                android:text="@string/register_send_verification_string"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_text_size" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contour_down_shape"
            android:gravity="center_vertical"
            android:paddingBottom="30px"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:paddingTop="30px">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_pwd_string" />

            <EditText
                android:id="@+id/pwd_et"
                style="@style/TitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/register_hint_pwd_string"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="@color/hintTextColor" />

            <CheckBox
                android:id="@+id/show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="32px"
                android:button="@drawable/show_pwd_selector"
                android:visibility="visible" />
        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/register_btn"
        style="@style/SubmitButtonStyle"
        android:layout_below="@id/input_layout"
        android:layout_marginTop="48px"
        android:enabled="false"
        android:text="@string/register_string" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:layout_marginTop="20px"
        android:gravity="bottom"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/agree_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:layout_marginTop="20px"
            android:button="@drawable/check_selector"
            android:checked="true"
            android:text="@string/register_read"
            android:textColor="@color/subTextColor"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/register_protocol_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_protocol"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_text_size" />

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="@color/subTextColor"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_to_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_text_size" />
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoRelativeLayout>