<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zdjf.qqh.ui.customview.TopBarView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/forget_pwd_title"
        app:show_close="visible"
        app:title_text_color="@color/mainTextColor" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contour_up_down_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="30px"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:paddingTop="30px">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_phone_string" />

            <EditText
                android:id="@+id/phone_et"
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:background="@null"
                android:hint="@string/login_phone_string"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColorHint="@color/hintTextColor" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contour_down_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15px"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:paddingTop="15px">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_verification_code_string" />

            <EditText
                android:id="@+id/verification_et"
                style="@style/TitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/register_hint_verification_string"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColorHint="@color/hintTextColor" />

            <TextView
                android:id="@+id/get_verification_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/verification_bg"
                android:gravity="center"
                android:paddingBottom="16px"
                android:paddingLeft="16px"
                android:paddingRight="16px"
                android:paddingTop="16px"
                android:singleLine="true"
                android:text="@string/register_send_verification_string"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_text_size" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contour_down_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="30px"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:paddingTop="30px">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_new_pwd_string" />

            <EditText
                android:id="@+id/new_pwd_et"
                style="@style/TitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/forget_new_pwd_hint_string"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="@color/hintTextColor" />

            <CheckBox
                android:id="@+id/show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:button="@drawable/show_pwd_selector"
                android:visibility="visible" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contour_down_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="30px"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:paddingTop="30px">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_confirm_pwd_string" />

            <EditText
                android:id="@+id/confirm_pwd_et"
                style="@style/TitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/forget_confirm_pwd_hint_string"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="@color/hintTextColor" />

            <CheckBox
                android:id="@+id/confirm_show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:button="@drawable/show_pwd_selector"
                android:visibility="visible" />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/submit_reset_pwd"
        style="@style/SubmitButtonStyle"
        android:enabled="false"
        android:text="@string/confirm_string" />

</com.zhy.autolayout.AutoLinearLayout>