<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45px"
            android:text="@string/copy_success"
            android:textColor="@color/blueTextColor"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6px"
            android:text="@string/step"
            android:textColor="@color/mainTextColor"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6px"
            android:text="@string/attention"
            android:textColor="@color/mainTextColor"
            android:textSize="@dimen/sp_15" />

        <ImageView
            android:layout_width="410px"
            android:layout_height="370px"
            android:layout_marginTop="30px"
            android:scaleType="fitXY"
            android:src="@mipmap/mine_img_wechat" />

        <Button
            android:id="@+id/to_wx_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="290px"
            android:layout_height="78px"
            android:layout_marginBottom="40px"
            android:layout_marginTop="38px"
            android:background="@mipmap/mine_button_wechat"
            android:minHeight="0dp"
            android:text="@string/open_wx"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15" />
    </com.zhy.autolayout.AutoLinearLayout>

    <ImageView
        android:id="@+id/close_iv"
        android:layout_width="60px"
        android:layout_height="60px"
        android:layout_marginTop="36px"
        android:src="@mipmap/mine_icon_cancel" />
</com.zhy.autolayout.AutoLinearLayout>