<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zdjf.qqh.ui.customview.TopBarView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/change_pwd"
        app:show_close="visible"
        app:title_text_color="@color/mainTextColor" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:background="@drawable/contour_up_down_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="30px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:paddingTop="30px">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_old_pwd_string" />

        <EditText
            android:id="@+id/old_pwd_et"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/edit_old_pwd_hint_string"
            android:inputType="textPassword"
            android:longClickable="false"
            android:textColorHint="@color/hintTextColor" />

        <CheckBox
            android:id="@+id/show_old_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="32px"
            android:button="@drawable/show_pwd_selector"
            android:visibility="visible" />

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_down_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="30px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:paddingTop="30px">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_new_pwd_string" />

        <EditText
            android:id="@+id/new_pwd_et"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_weight="1"
            android:maxLength="20"
            android:background="@null"
            android:hint="@string/edit_new_pwd_hint_string"
            android:inputType="textPassword"
            android:longClickable="false"
            android:textColorHint="@color/hintTextColor" />

        <CheckBox
            android:id="@+id/show_new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="32px"
            android:button="@drawable/show_pwd_selector"
            android:visibility="visible" />

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_down_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="30px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:paddingTop="30px">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_confirm_pwd_string" />

        <EditText
            android:id="@+id/confirm_pwd_et"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_weight="1"
            android:maxLength="20"
            android:background="@null"
            android:hint="@string/edit_confirm_pwd_hint_string"
            android:inputType="textPassword"
            android:longClickable="false"
            android:textColorHint="@color/hintTextColor" />

        <CheckBox
            android:id="@+id/show_confirm_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="32px"
            android:button="@drawable/show_pwd_selector"
            android:visibility="visible" />

    </com.zhy.autolayout.AutoLinearLayout>


    <Button
        android:id="@+id/edit_pwd"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_marginTop="60px"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:text="@string/confirm_string"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size" />

</com.zhy.autolayout.AutoLinearLayout>