<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zdjf.qqh.ui.customview.TopBarView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/edit_nickname"
        app:show_close="visible"
        app:title_text_color="@color/mainTextColor"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20px"
        android:background="@drawable/contour_up_down_shape"
        android:orientation="horizontal"
        android:paddingBottom="30px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:paddingTop="30px">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_nickname" />

        <EditText
            android:id="@+id/nickname"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/edit_nickname_hint"
            android:inputType="text"
            android:maxLength="16"
            android:textColorHint="@color/hintTextColor" />

    </com.zhy.autolayout.AutoLinearLayout>

    <TextView
        android:id="@+id/submit_nickname"
        android:layout_width="match_parent"
        android:layout_height="108px"
        android:layout_marginTop="70px"
        android:background="@drawable/contour_up_down_shape"
        android:gravity="center"
        android:text="@string/confirm_string"
        android:textColor="@color/mainTextColor"
        android:textSize="@dimen/main_text_size" />
</com.zhy.autolayout.AutoLinearLayout>